Implemented CRUD operation on RoomMap entity